[gd_scene load_steps=11 format=3 uid="uid://dmqurk6pfr4yt"]

[ext_resource type="Script" path="res://scripts/opciones.gd" id="1_cc2mi"]
[ext_resource type="Theme" uid="uid://ccr3xj3644dmh" path="res://menu.tres" id="2_djbcr"]
[ext_resource type="Texture2D" uid="uid://bmvvnoxnppv1d" path="res://assets/escenario/water2.png" id="3_v0208"]
[ext_resource type="Texture2D" uid="uid://mcstrji2fkwx" path="res://assets/escenario/water1.png" id="4_gy8ch"]
[ext_resource type="Texture2D" uid="uid://bxx6065jphnwb" path="res://assets/escenario/grass2.png" id="5_d4gn7"]
[ext_resource type="Texture2D" uid="uid://cadmv268f76g7" path="res://assets/escenario/bg_wood.png" id="6_lslss"]
[ext_resource type="Texture2D" uid="uid://d80n1uh2n0iq" path="res://assets/escenario/backgroundEmpty.png" id="7_dni20"]
[ext_resource type="AudioStream" uid="uid://bmv3mq1jrr6rh" path="res://assets/sonidos/click.ogg" id="8_4krgc"]
[ext_resource type="FontFile" uid="uid://2afrstrnlcnc" path="res://assets/fuente/Frogie-Regular.ttf" id="9_ob1k6"]

[sub_resource type="LabelSettings" id="LabelSettings_iw7sy"]
font = ExtResource("9_ob1k6")
font_size = 25

[node name="Opciones" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cc2mi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -140.5
offset_right = 200.0
offset_bottom = 140.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_djbcr")
alignment = 1

[node name="lbl_volumen" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_djbcr")
theme_override_colors/font_outline_color = Color(0.203922, 0.596078, 0.858824, 1)
theme_override_font_sizes/font_size = 45
text = "Volumen: 00"
horizontal_alignment = 1

[node name="sld_volumen" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -100.0
max_value = 0.0
step = 10.0

[node name="Resolución" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_djbcr")
text = "RESOLUCIÓN"

[node name="Volver" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_djbcr")
text = "VOLVER"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Mar1" type="TextureRect" parent="CanvasLayer"]
z_index = -2
offset_top = 442.0
offset_right = 1152.0
offset_bottom = 665.0
scale = Vector2(1, 0.5)
texture = ExtResource("3_v0208")
stretch_mode = 1

[node name="Mar2" type="TextureRect" parent="CanvasLayer"]
z_index = -3
offset_top = 389.0
offset_right = 1152.0
offset_bottom = 613.0
scale = Vector2(1, 0.540001)
texture = ExtResource("4_gy8ch")
stretch_mode = 1

[node name="Mar3" type="TextureRect" parent="CanvasLayer"]
z_index = -4
offset_top = 336.0
offset_right = 1152.0
offset_bottom = 560.0
scale = Vector2(1, 0.540001)
texture = ExtResource("3_v0208")
stretch_mode = 1

[node name="Campo" type="TextureRect" parent="CanvasLayer"]
z_index = -5
offset_top = 250.0
offset_right = 1152.0
offset_bottom = 375.0
texture = ExtResource("5_d4gn7")
expand_mode = 1
stretch_mode = 1

[node name="Madera" type="TextureRect" parent="CanvasLayer"]
z_index = 1000
offset_top = 523.0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("6_lslss")
expand_mode = 1

[node name="Fondo" type="TextureRect" parent="CanvasLayer"]
z_index = -15
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_bottom = 612.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.5)
texture = ExtResource("7_dni20")
stretch_mode = 1

[node name="lbl_opciones" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 98.0
offset_right = 125.0
offset_bottom = 158.0
grow_horizontal = 2
theme = ExtResource("2_djbcr")
theme_override_font_sizes/font_size = 60
text = "OPCIONES"

[node name="Clic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4krgc")

[node name="by Álvaro Moyano Vila" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -75.0
offset_right = 250.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Creado y diseñado por Álvaro Moyano Vila"
label_settings = SubResource("LabelSettings_iw7sy")
horizontal_alignment = 1

[connection signal="value_changed" from="VBoxContainer/sld_volumen" to="." method="_on_sld_volumen_value_changed"]
[connection signal="pressed" from="VBoxContainer/Resolución" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="VBoxContainer/Resolución" to="." method="_on_resolución_pressed"]
[connection signal="pressed" from="VBoxContainer/Volver" to="." method="_on_volver_pressed"]
